[package]
name = "screen_printer"
version = "0.1.6"
edition = "2021"
license = "MIT"
authors = ["Link <CirnoStrongest9909@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/LinkTheDot/screen_printer"
description = "A crate for creating and/or printing grids"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
lazy_static = "1.4.0"
rand = "0.8.5"
termion = "2.0.1"
# log = "0.4.17"

# [dev-dependencies]
# log4rs = "1.2.0"
# chrono = "0.4.23"
