[package]
name = "screen_printer"
version = "0.2.6"
edition = "2021"
license = "MIT"
authors = ["Link <CirnoStrongest9909@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/LinkTheDot/screen_printer"
description = "A crate for displaying rectangular blocks of text to a terminal."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
log = "0.4"
thiserror = "1.0.49"

[dev-dependencies]
rand = "0.8.5"
log4rs = "1.2.0"
chrono = "0.4.23"
